--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <section id="discord-tools" class="tab-content">
+        <section id="discord-tools" class="tab-content" style="display: none;">
             <h2>Discord Webhook Tools</h2>
             <div class="webhook-container">
                 <input type="text" id="webhook-url" placeholder="Enter Discord webhook URL">
@@ -99,7 +99,7 @@
             </div>
         </section>
 
-        <section id="features" class="tab-content">
+        <section id="features" class="tab-content" style="display: none;">
             <h3>Features</h3>
             <ul>
                 <li><strong>Multi-Transform</strong> - Apply transformations like leetspeak, reverse, uppercase, and more.</li>
@@ -109,13 +109,12 @@
             </ul>
         </section>
 
-        <section id="about" class="tab-content">
+        <section id="about" class="tab-content" style="display: none;">
             <h3>About</h3>
             <p>Text Transformer Pro is your all-in-one solution for text manipulation and Discord integration.</p>
         </section>
     </div>
 
     <script src="script.js"></script>
-    <script src="discord-tools.js"></script>
 </body>
 </html>
