--- a/index.html
+++ b/index.html
@@ -25,53 +25,55 @@
         <div class="extra-options">
             <h2>Additional Options</h2>
             <div class="options">
-                <input type="checkbox" id="mentionEveryone"> <label for="mentionEveryone">Mention @everyone</label>
-                <input type="checkbox" id="mentionHere"> <label for="mentionHere">Mention @here</label>
-                <input type="checkbox" id="addTimestamp"> <label for="addTimestamp">Add Timestamp</label>
-                <input type="checkbox" id="customEmoji"> <label for="customEmoji">Add Custom Emoji</label>
-                <input type="checkbox" id="sendEmbed"> <label for="sendEmbed">Send Message as Embed</label>
-                <input type="checkbox" id="includeImage"> <label for="includeImage">Include Image URL</label>
-                <input type="checkbox" id="includeVideo"> <label for="includeVideo">Include Video URL</label>
-                <input type="checkbox" id="addFile"> <label for="addFile">Add File Attachment</label>
-                <input type="checkbox" id="changeColor"> <label for="changeColor">Change Message Color</label>
-                <input type="checkbox" id="footerText"> <label for="footerText">Add Footer Text</label>
-                <input type="checkbox" id="authorName"> <label for="authorName">Add Author Name</label>
-                <input type="checkbox" id="thumbnail"> <label for="thumbnail">Add Thumbnail</label>
-                <input type="checkbox" id="description"> <label for="description">Add Description</label>
-                <input type="checkbox" id="customBotName"> <label for="customBotName">Use Custom Bot Name</label>
-                <input type="checkbox" id="addReactions"> <label for="addReactions">Add Reactions</label>
-                <input type="checkbox" id="multiChannels"> <label for="multiChannels">Send to Multiple Channels</label>
-                <input type="checkbox" id="directMessages"> <label for="directMessages">Send to Direct Messages</label>
-                <input type="checkbox" id="messageTitle"> <label for="messageTitle">Change Message Title</label>
-                <input type="checkbox" id="spoilerTag"> <label for="spoilerTag">Add Spoiler Tag</label>
-                <input type="checkbox" id="inlineField"> <label for="inlineField">Add Inline Field</label>
-                <input type="checkbox" id="footerImage"> <label for="footerImage">Add Footer Image</label>
-                <input type="checkbox" id="authorIcon"> <label for="authorIcon">Add Author Icon</label>
-                <input type="checkbox" id="visibility"> <label for="visibility">Set Message Visibility (Public/Private)</label>
-                <input type="checkbox" id="customAvatar"> <label for="customAvatar">Include Custom Bot Avatar</label>
-                <input type="checkbox" id="quoteMessage"> <label for="quoteMessage">Add Quote</label>
-                <input type="checkbox" id="timestampFormat"> <label for="timestampFormat">Add Timestamp Format</label>
-                <input type="checkbox" id="buttonLink"> <label for="buttonLink">Add Button Link</label>
-                <input type="checkbox" id="discordInvite"> <label for="discordInvite">Add Discord Invite Link</label>
-                <input type="checkbox" id="serverInfo"> <label for="serverInfo">Include Server Info</label>
-                <input type="checkbox" id="customFooterText"> <label for="customFooterText">Customize Footer Text</label>
-                <input type="checkbox" id="richEmbedTitle"> <label for="richEmbedTitle">Add Rich Embed Title</label>
-                <input type="checkbox" id="markdownFormatting"> <label for="markdownFormatting">Use Markdown Formatting</label>
-                <input type="checkbox" id="customFooterIcon"> <label for="customFooterIcon">Add Custom Footer Icon</label>
-                <input type="checkbox" id="webhookTheme"> <label for="webhookTheme">Use Specific Webhook Theme</label>
-                <input type="checkbox" id="roleMention"> <label for="roleMention">Add Role Mention</label>
-                <input type="checkbox" id="fileFormat"> <label for="fileFormat">Send as File Format</label>
-                <input type="checkbox" id="footerTimestamp"> <label for="footerTimestamp">Add Timestamp to Footer</label>
-                <input type="checkbox" id="embedTitle"> <label for="embedTitle">Add Custom Embed Title</label>
-                <input type="checkbox" id="mentionRole"> <label for="mentionRole">Mention Role</label>
-                <input type="checkbox" id="buttonAction"> <label for="buttonAction">Add Button Action</label>
-                <input type="checkbox" id="reactionEmojis"> <label for="reactionEmojis">Add Reaction Emojis</label>
-                <input type="checkbox" id="embedFields"> <label for="embedFields">Add Embed Fields</label>
-                <input type="checkbox" id="userStatus"> <label for="userStatus">Include User Status</label>
-                <input type="checkbox" id="customFooterLink"> <label for="customFooterLink">Add Footer Link</label>
-                <input type="checkbox" id="embedsMultiple"> <label for="embedsMultiple">Send Multiple Embeds</label>
-                <input type="checkbox" id="messageType"> <label for="messageType">Set Message Type</label>
-                <input type="checkbox" id="mentionCustomRole"> <label for="mentionCustomRole">Mention Custom Role</label>
+                <div class="checkbox-group">
+                    <input type="checkbox" id="mentionEveryone"> <label for="mentionEveryone">Mention @everyone</label>
+                    <input type="checkbox" id="mentionHere"> <label for="mentionHere">Mention @here</label>
+                    <input type="checkbox" id="addTimestamp"> <label for="addTimestamp">Add Timestamp</label>
+                    <input type="checkbox" id="customEmoji"> <label for="customEmoji">Add Custom Emoji</label>
+                    <input type="checkbox" id="sendEmbed"> <label for="sendEmbed">Send Message as Embed</label>
+                    <input type="checkbox" id="includeImage"> <label for="includeImage">Include Image URL</label>
+                    <input type="checkbox" id="includeVideo"> <label for="includeVideo">Include Video URL</label>
+                    <input type="checkbox" id="addFile"> <label for="addFile">Add File Attachment</label>
+                    <input type="checkbox" id="changeColor"> <label for="changeColor">Change Message Color</label>
+                    <input type="checkbox" id="footerText"> <label for="footerText">Add Footer Text</label>
+                    <input type="checkbox" id="authorName"> <label for="authorName">Add Author Name</label>
+                    <input type="checkbox" id="thumbnail"> <label for="thumbnail">Add Thumbnail</label>
+                    <input type="checkbox" id="description"> <label for="description">Add Description</label>
+                    <input type="checkbox" id="customBotName"> <label for="customBotName">Use Custom Bot Name</label>
+                    <input type="checkbox" id="addReactions"> <label for="addReactions">Add Reactions</label>
+                    <input type="checkbox" id="multiChannels"> <label for="multiChannels">Send to Multiple Channels</label>
+                    <input type="checkbox" id="directMessages"> <label for="directMessages">Send to Direct Messages</label>
+                    <input type="checkbox" id="messageTitle"> <label for="messageTitle">Change Message Title</label>
+                    <input type="checkbox" id="spoilerTag"> <label for="spoilerTag">Add Spoiler Tag</label>
+                    <input type="checkbox" id="inlineField"> <label for="inlineField">Add Inline Field</label>
+                    <input type="checkbox" id="footerImage"> <label for="footerImage">Add Footer Image</label>
+                    <input type="checkbox" id="authorIcon"> <label for="authorIcon">Add Author Icon</label>
+                    <input type="checkbox" id="visibility"> <label for="visibility">Set Message Visibility (Public/Private)</label>
+                    <input type="checkbox" id="customAvatar"> <label for="customAvatar">Include Custom Bot Avatar</label>
+                    <input type="checkbox" id="quoteMessage"> <label for="quoteMessage">Add Quote</label>
+                    <input type="checkbox" id="timestampFormat"> <label for="timestampFormat">Add Timestamp Format</label>
+                    <input type="checkbox" id="buttonLink"> <label for="buttonLink">Add Button Link</label>
+                    <input type="checkbox" id="discordInvite"> <label for="discordInvite">Add Discord Invite Link</label>
+                    <input type="checkbox" id="serverInfo"> <label for="serverInfo">Include Server Info</label>
+                    <input type="checkbox" id="customFooterText"> <label for="customFooterText">Customize Footer Text</label>
+                    <input type="checkbox" id="richEmbedTitle"> <label for="richEmbedTitle">Add Rich Embed Title</label>
+                    <input type="checkbox" id="markdownFormatting"> <label for="markdownFormatting">Use Markdown Formatting</label>
+                    <input type="checkbox" id="customFooterIcon"> <label for="customFooterIcon">Add Custom Footer Icon</label>
+                    <input type="checkbox" id="webhookTheme"> <label for="webhookTheme">Use Specific Webhook Theme</label>
+                    <input type="checkbox" id="roleMention"> <label for="roleMention">Add Role Mention</label>
+                    <input type="checkbox" id="fileFormat"> <label for="fileFormat">Send as File Format</label>
+                    <input type="checkbox" id="footerTimestamp"> <label for="footerTimestamp">Add Timestamp to Footer</label>
+                    <input type="checkbox" id="embedTitle"> <label for="embedTitle">Add Custom Embed Title</label>
+                    <input type="checkbox" id="mentionRole"> <label for="mentionRole">Mention Role</label>
+                    <input type="checkbox" id="buttonAction"> <label for="buttonAction">Add Button Action</label>
+                    <input type="checkbox" id="reactionEmojis"> <label for="reactionEmojis">Add Reaction Emojis</label>
+                    <input type="checkbox" id="embedFields"> <label for="embedFields">Add Embed Fields</label>
+                    <input type="checkbox" id="userStatus"> <label for="userStatus">Include User Status</label>
+                    <input type="checkbox" id="customFooterLink"> <label for="customFooterLink">Add Footer Link</label>
+                    <input type="checkbox" id="embedsMultiple"> <label for="embedsMultiple">Send Multiple Embeds</label>
+                    <input type="checkbox" id="messageType"> <label for="messageType">Set Message Type</label>
+                    <input type="checkbox" id="mentionCustomRole"> <label for="mentionCustomRole">Mention Custom Role</label>
+                </div>
             </div>
         </div>
 
