--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Packing Generator</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+        }
+        .slider-container {
+            margin-top: 15px;
+        }
+        .output {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #e6e6e6;
+            border-radius: 5px;
+            white-space: pre-wrap;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Random Packing Generator</h1>
+        <label for="prompt">Enter a Prompt (e.g., "bassy", "loud clear"):</label>
+        <input type="text" id="prompt" placeholder="Type your prompt here..." style="width: 100%; padding: 8px; margin-top: 10px;">
 
+        <div class="slider-container">
+            <label for="slider">Adjust Intensity (0-100):</label>
+            <input type="range" id="slider" min="0" max="100" value="50" style="width: 100%;">
+            <span id="slider-value">50</span>
+        </div>
+
+        <button id="generate-button" style="margin-top: 20px; padding: 10px; width: 100%; font-size: 16px;">Generate Packing Set</button>
+
+        <div id="output" class="output"></div>
+    </div>
+
+    <script>
+        const slider = document.getElementById('slider');
+        const sliderValue = document.getElementById('slider-value');
+        const generateButton = document.getElementById('generate-button');
+        const outputDiv = document.getElementById('output');
+
+        slider.addEventListener('input', () => {
+            sliderValue.textContent = slider.value;
+        });
+
+        generateButton.addEventListener('click', () => {
+            const prompt = document.getElementById('prompt').value;
+            const intensity = slider.value;
+            const packingSet = generatePackingSet(prompt, intensity);
+            outputDiv.textContent = packingSet;
+        });
+
+        function generatePackingSet(prompt, intensity) {
+            const presets = {
+                bassy: {
+                    preamp: "40 dB",
+                    plugins: [
+                        "Library Wider_1.dll",
+                        "Library basiQ.dll",
+                    ]
+                },
+                loud: {
+                    preamp: "50 dB",
+                    plugins: [
+                        "Library QuickHaas_1_1.dll",
+                        "Library GGain_1.dll",
+                    ]
+                },
+                clear: {
+                    preamp: "35 dB",
+                    plugins: [
+                        "Library ReverbSolo.dll",
+                        "Library Effector_x64.dll",
+                    ]
+                }
+            };
+
+            const keywords = prompt.split(' ');
+            let selectedPresets = [];
+
+            keywords.forEach(keyword => {
+                if (presets[keyword]) {
+                    selectedPresets.push(presets[keyword]);
+                }
+            });
+
+            if (selectedPresets.length === 0) {
+                return "No matching presets found for the prompt.";
+            }
+
+            const combinedPreamp = selectedPresets.map(preset => preset.preamp).join(' + ');
+            const combinedPlugins = Array.from(new Set(selectedPresets.flatMap(preset => preset.plugins))).join(', ');
+
+            return `Generated Packing Set:\nPrompt: ${prompt}\nIntensity: ${intensity}\nPreamp: ${combinedPreamp}\nPlugins: ${combinedPlugins}`;
+        }
+    </script>
+</body>
+</html>
