--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
           <div class="tabs">
             <button class="tab-btn active" onclick="switchTab('calculator')">Calculator</button>
-            <button class="tab-btn" onclick="switchTab('prompt')">Prompt Generator</button>
+            <button class="tab-btn" onclick="switchTab('prompt')">Prompt Generator WIP</button>
           </div>
 
           <div class="tab-content" id="calculator">
